--- a/apps/bookinfo/templates/bookinfo-b.yaml
+++ b/apps/bookinfo/templates/bookinfo-b.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     namespace: bookinfo
     server: "{{ .Values.spec.destination.server }}"
-  project: default
+  project: bookinfo
   source:
     path: bookinfo
     repoURL: https://github.com/thiagonache/bookinfo
