--- a/apps/bookinfo/templates/bookinfo-a.yaml
+++ b/apps/bookinfo/templates/bookinfo-a.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     namespace: bookinfo
-    server: { { .Values.spec.destination.server } }
+    server: "{{ .Values.spec.destination.server }}"
   project: bookinfo
   source:
     path: bookinfo
