--- a/apps/bookinfo/templates/bookinfo-b.yaml
+++ b/apps/bookinfo/templates/bookinfo-b.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bookinfo-b
+  name: "{{ .Values.spec.deploy-b.appName }}"
   namespace: bookinfo
   finalizers:
     - resources-finalizer.argocd.argoproj.io
