--- a/apps/bookinfo/values.yaml
+++ b/apps/bookinfo/values.yaml
@@ -1,3 +1,7 @@
 spec:
   destination:
     server: https://kubernetes.default.svc
+  deploy-a:
+    appName: bookinfo-ab-a
+  deploy-b:
+    appName: bookinfo-ab-b
