--- a/apps/bookinfo/values.yaml
+++ b/apps/bookinfo/values.yaml
@@ -2,6 +2,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
   deployA:
-    appName: bookinfo-ab-a
+    appName: bookinfo-ab-deploy-a
   deployB:
-    appName: bookinfo-ab-b
+    appName: bookinfo-ab-deploy-b
