--- a/apps/templates/bookinfo-a.yaml
+++ b/apps/templates/bookinfo-a.yaml
@@ -2,14 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: "{{ .Values.spec.deployA.appName }}"
-  namespace: bookinfo
+  namespace: test
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: bookinfo
+    namespace: test
     server: "{{ .Values.spec.destination.server }}"
-  project: bookinfo
+  project: default
   source:
     path: bookinfo
     repoURL: https://github.com/thiagonache/argocd-apps
