--- a/apps/templates/bookinfo-a.yaml
+++ b/apps/templates/bookinfo-a.yaml
@@ -2,15 +2,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: "{{ .Values.spec.deployA.appName }}"
-  namespace: test
+  namespace: "{{ .Values.spec.namespace }}"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: test
+    namespace: "{{ .Values.spec.namespace }}"
     server: "{{ .Values.spec.destination.server }}"
-  project: default
+  project: "{{ .Values.spec.project }}"
   source:
     path: bookinfo
-    repoURL: https://github.com/thiagonache/argocd-apps
-    targetRevision: HEAD
+    repoURL: "{{ .Values.spec.source.repoURL }}"
+    targetRevision: "{{ .Values.spec.source.revision }}"
