--- a/apps/templates/bookinfo.yaml
+++ b/apps/templates/bookinfo.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: "{{ .Values.spec.deployA.appName }}"
+  name: "{{ .Values.spec.appName }}"
   namespace: "{{ .Values.spec.namespace }}"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
