--- a/apps/values.yaml
+++ b/apps/values.yaml
@@ -5,4 +5,6 @@ spec:
   source:
     repoURL: https://github.com/thiagonache/argocd-apps
     revision: HEAD
+bookinfo:
+  namespace: bookinfo
   appName: bookinfo
