--- a/bookinfo/templates/productpage.yaml
+++ b/bookinfo/templates/productpage.yaml
@@ -24,8 +24,8 @@ metadata:
   labels:
     account: productpage
 ---
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: productpage-{{ .Values.productpage.version }}
   labels:
