--- a/reviews/templates/deployment.yaml
+++ b/reviews/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
   strategy:
     blueGreen:
       # Name of the service that the rollout modifies as the active service.
-      activeService: active-service
+      activeService: reviews-{{ .Values.reviews.version }}
       # Pre-promotion analysis run
       prePromotionAnalysis:
         templates:
@@ -48,9 +48,9 @@ spec:
         # template arguments
         args:
         - name: service-name
-          value: guestbook-svc.default.svc.cluster.local
+          value: reviews-{{ .Values.reviews.version }}.default.svc.cluster.local
       # Name of the service that the rollout modifies as the preview service.
-      previewService: preview-service 
+      previewService: reviews-{{ .Values.reviews.version }}
       # The number of replicas to run under the preview service before the switchover. Once the rollout is resumed the new replicaset will be full scaled up before the switch occurs +optional
       previewReplicaCount: 1
       # Indicates if the rollout should automatically promote the new ReplicaSet to the active service or enter a paused state. If not specified, the default value is true. +optional
