--- a/reviews/templates/service.yaml
+++ b/reviews/templates/service.yaml
@@ -13,3 +13,19 @@ spec:
   selector:
     app: reviews
     version: "{{ .Values.reviews.version }}"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: reviews-preview
+  labels:
+    app: reviews
+    service: reviews
+    version: preview
+spec:
+  ports:
+    - port: 9080
+      name: http
+  selector:
+    app: reviews
+    version: preview
