--- a/reviews/templates/deployment.yaml
+++ b/reviews/templates/deployment.yaml
@@ -50,7 +50,7 @@ spec:
         - name: service-name
           value: reviews-{{ .Values.reviews.version }}.default.svc.cluster.local
       # Name of the service that the rollout modifies as the preview service.
-      previewService: reviews-{{ .Values.reviews.version }}
+      previewService: reviews-preview
       # The number of replicas to run under the preview service before the switchover. Once the rollout is resumed the new replicaset will be full scaled up before the switch occurs +optional
       previewReplicaCount: 1
       # Indicates if the rollout should automatically promote the new ReplicaSet to the active service or enter a paused state. If not specified, the default value is true. +optional
