--- a/reviews/templates/deployment.yaml
+++ b/reviews/templates/deployment.yaml
@@ -1,26 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: reviews-{{ .Values.reviews.version }}
+  name: reviews
   labels:
     app: reviews
-    version: "{{ .Values.reviews.version }}"
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: reviews
-      version: "{{ .Values.reviews.version }}"
   template:
     metadata:
       labels:
         app: reviews
-        version: "{{ .Values.reviews.version }}"
     spec:
-      serviceAccountName: bookinfo-reviews-{{ .Values.reviews.version }}
+      serviceAccountName: bookinfo-reviews
       containers:
         - name: reviews
-          image: docker.io/istio/examples-bookinfo-reviews-{{ .Values.reviews.version }}
+          image: "{{ .Values.reviews.image }}"
           imagePullPolicy: IfNotPresent
           env:
             - name: LOG_DIR
@@ -40,7 +37,7 @@ spec:
   strategy:
     blueGreen:
       # Name of the service that the rollout modifies as the active service.
-      activeService: reviews-{{ .Values.reviews.version }}
+      activeService: reviews
       # Pre-promotion analysis run
       prePromotionAnalysis:
         templates:
@@ -48,7 +45,7 @@ spec:
         # template arguments
         args:
         - name: service-name
-          value: reviews-{{ .Values.reviews.version }}.default.svc.cluster.local
+          value: reviews.default.svc.cluster.local
       # Name of the service that the rollout modifies as the preview service.
       previewService: reviews-preview
       # The number of replicas to run under the preview service before the switchover. Once the rollout is resumed the new replicaset will be full scaled up before the switch occurs +optional
