--- a/reviews/templates/service.yaml
+++ b/reviews/templates/service.yaml
@@ -1,31 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: reviews-{{ .Values.reviews.version }}
+  name: reviews
   labels:
     app: reviews
     service: reviews
-    version: "{{ .Values.reviews.version }}"
 spec:
   ports:
     - port: 9080
       name: http
   selector:
     app: reviews
-    version: "{{ .Values.reviews.version }}"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: reviews-preview
   labels:
-    app: reviews
-    service: reviews
-    version: preview
+    app: reviews-preview
+    service: reviews-preview
 spec:
   ports:
     - port: 9080
       name: http
   selector:
-    app: reviews
-    version: preview
+    app: reviews-preview
