--- a/reviews/templates/service-account.yaml
+++ b/reviews/templates/service-account.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-reviews-{{ .Values.reviews.version }}
+  name: bookinfo-reviews
   labels:
     account: reviews
