--- a/details/templates/deployment.yaml
+++ b/details/templates/deployment.yaml
@@ -1,26 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: details-{{ .Values.details.version }}
+  name: details
   labels:
     app: details
-    version: "{{ .Values.details.version }}"
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: details
-      version: "{{ .Values.details.version }}"
   template:
     metadata:
       labels:
         app: details
-        version: "{{ .Values.details.version }}"
     spec:
-      serviceAccountName: bookinfo-details-{{ .Values.details.version }}
+      serviceAccountName: bookinfo-details
       containers:
         - name: details
-          image: docker.io/istio/examples-bookinfo-details-{{ .Values.details.version }}
+          image: docker.io/istio/examples-bookinfo-details
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9080
