--- a/details/templates/service-account.yaml
+++ b/details/templates/service-account.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-details-{{ .Values.details.version }}
+  name: bookinfo-details
   labels:
     account: details
