--- a/details/templates/service.yaml
+++ b/details/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: details-{{ .Values.details.version }}
+  name: details
   labels:
     app: details
     service: details
-    version: "{{ .Values.details.version }}"
 spec:
   ports:
     - port: 9080
       name: http
   selector:
     app: details
-    version: "{{ .Values.details.version }}"
