--- a/productpage/templates/service-account.yaml
+++ b/productpage/templates/service-account.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-productpage-{{ .Values.productpage.version }}
+  name: bookinfo-productpage
   labels:
     account: productpage
