--- a/ratings/templates/deployment.yaml
+++ b/ratings/templates/deployment.yaml
@@ -1,23 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ratings-{{ .Values.ratings.version }}
+  name: ratings
   labels:
     app: ratings
-    version: "{{ .Values.ratings.version }}"
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: ratings
-      version: "{{ .Values.ratings.version }}"
   template:
     metadata:
       labels:
         app: ratings
-        version: "{{ .Values.ratings.version }}"
     spec:
-      serviceAccountName: bookinfo-ratings-{{ .Values.ratings.version }}
+      serviceAccountName: bookinfo-ratings
       containers:
         - name: ratings
           image: docker.io/istio/examples-bookinfo-ratings-{{ .Values.ratings.version }}
