--- a/ratings/templates/deployment.yaml
+++ b/ratings/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccountName: bookinfo-ratings
       containers:
         - name: ratings
-          image: docker.io/istio/examples-bookinfo-ratings-{{ .Values.ratings.version }}
+          image: docker.io/istio/examples-bookinfo-ratings-v1
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9080
