--- a/ratings/templates/service-account.yaml
+++ b/ratings/templates/service-account.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-ratings-{{ .Values.ratings.version }}
+  name: bookinfo-ratings
   labels:
     account: ratings
