--- a/reviews/templates/deployment.yaml
+++ b/reviews/templates/deployment.yaml
@@ -35,19 +35,8 @@ spec:
         - name: tmp
           emptyDir: {}
   strategy:
-    blueGreen:
-      # Name of the service that the rollout modifies as the active service.
-      activeService: reviews
-      # Pre-promotion analysis run
-      # Name of the service that the rollout modifies as the preview service.
-      previewService: reviews-preview
-      # The number of replicas to run under the preview service before the switchover. Once the rollout is resumed the new replicaset will be full scaled up before the switch occurs +optional
-      previewReplicaCount: 1
-      # Indicates if the rollout should automatically promote the new ReplicaSet to the active service or enter a paused state. If not specified, the default value is true. +optional
-      autoPromotionEnabled: false
-      # Automatically promotes the current ReplicaSet to active after the specified pause delay in seconds after the ReplicaSet becomes ready. If omitted, the Rollout enters and remains in a paused state until manually resumed by resetting spec.Paused to false. +optional
-      autoPromotionSeconds: 30
-      # Adds a delay before scaling down the previous replicaset. If omitted, the Rollout waits 30 seconds before scaling down the previous ReplicaSet. A minimum of 30 seconds is recommended to ensure IP table propagation across the nodes in a cluster. See https://github.com/argoproj/argo-rollouts/issues/19#issuecomment-476329960 for more information
-      scaleDownDelaySeconds: 30
-      # Limits the number of old RS that can run at once before getting scaled down. Defaults to nil
-      scaleDownDelayRevisionLimit: 2
+  # ----- Everything above this comment are the same as a deployment -----
+    canary: # A new field that used to provide configurable options for a Canary strategy
+      steps:
+      - setWeight: 20
+      - pause: {}
