--- a/ratings/templates/service.yaml
+++ b/ratings/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ratings-{{ .Values.ratings.version }}
+  name: ratings
   labels:
     app: ratings
     service: ratings
-    version: "{{ .Values.ratings.version }}"
 spec:
   ports:
     - port: 9080
       name: http
   selector:
     app: ratings
-    version: "{{ .Values.ratings.version }}"
