--- a/reviews/templates/rollout.yaml
+++ b/reviews/templates/rollout.yaml
@@ -37,13 +37,21 @@ spec:
   strategy:
     # ----- Everything above this comment are the same as a deployment -----
     canary: # A new field that used to provide configurable options for a Canary strategy
+      # The maximum number of pods that can be unavailable during the update. Value can be an absolute number (ex: 5) or a percentage of total pods at the start of update (ex: 10%). Absolute number is calculated from percentage by rounding down. This can not be 0 if MaxSurge is 0. By default, a fixed value of 1 is used. Example: when this is set to 30%, the old RC can be scaled down by 30% immediately when the rolling update starts. Once new pods are ready, old RC can be scaled down further, followed by scaling up the new RC, ensuring that at least 70% of original number of pods are available at all times during the update. +optional
+      maxUnavailable: 1
+      # The maximum number of pods that can be scheduled above the original number of pods. Value can be an absolute number (ex: 5) or a percentage of total pods at the start of the update (ex: 10%). This can not be 0 if MaxUnavailable is 0. Absolute number is calculated from percentage by rounding up. By default, a value of 1 is used. Example: when this is set to 30%, the new RC can be scaled up by 30% immediately when the rolling update starts. Once old pods have been killed, new RC can be scaled up further, ensuring that total number of pods running at any time during the update is atmost 130% of original pods. +optional
+      maxSurge: "20%"
       steps:
         - setWeight: 20
-        - pause: 1m
+        - pause:
+            duration: 3m
         - setWeight: 40
-        - pause: 30s
+        - pause:
+            duration: 2m
         - setWeight: 60
-        - pause: 30s
+        - pause:
+            duration: 1m
         - setWeight: 80
-        - pause: 30s
+        - pause:
+            duration: 30s
         - setWeight: 100
