--- a/reviews/templates/analysis-template.yaml
+++ b/reviews/templates/analysis-template.yaml
@@ -11,7 +11,7 @@ spec:
       interval: 60s
       provider:
         prometheus:
-          address: "{{ .Values.prometheus.address | default "http://prometheus-k8s.monitoring.svc.cluster.local:9090" }}"
+          address: '{{ .Values.prometheus.address | default "http://prometheus-k8s.monitoring.svc.cluster.local:9090" }}'
           query: |
             sum(irate(
               istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}",response_code!~"5.*"}[5m]
