--- a/reviews/templates/analysis-template.yaml
+++ b/reviews/templates/analysis-template.yaml
@@ -3,8 +3,6 @@ kind: AnalysisTemplate
 metadata:
   name: success-rate
 spec:
-  args:
-    - name: service-name
   metrics:
     - name: success-rate
       successCondition: result[0] >= 0.95
@@ -14,8 +12,8 @@ spec:
           address: "{{ .Values.prometheus.address }}"
           query: |
             sum(irate(
-              istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}",response_code!~"5.*"}[5m]
+              istio_requests_total{reporter="source",destination_service=~"{{ .Values.reviews.service }}",response_code!~"5.*"}[1m]
             )) / 
             sum(irate(
-              istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}"}[5m]
+              istio_requests_total{reporter="source",destination_service=~"{{ .Values.reviews.service }}"}[1m]
             ))
