--- a/reviews/templates/rollout.yaml
+++ b/reviews/templates/rollout.yaml
@@ -62,13 +62,13 @@ spec:
       steps:
         - setWeight: 20
         - pause:
-            duration: 3m
+            duration: 1m
         - setWeight: 40
         - pause:
-            duration: 2m
+            duration: 30s
         - setWeight: 60
         - pause:
-            duration: 1m
+            duration: 30s
         - setWeight: 80
         - pause:
             duration: 30s
