--- a/reviews/templates/service.yaml
+++ b/reviews/templates/service.yaml
@@ -11,3 +11,17 @@ spec:
       name: http
   selector:
     app: reviews
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: reviews-preview
+  labels:
+    app: reviews
+    service: reviews-preview
+spec:
+  ports:
+    - port: 9080
+      name: http
+  selector:
+    app: reviews-preview
