--- a/reviews/templates/rollout.yaml
+++ b/reviews/templates/rollout.yaml
@@ -49,7 +49,7 @@ spec:
   strategy:
     # ----- Everything above this comment are the same as a deployment -----
     blueGreen:
-      activeService: reviews
+      activeService: reviews-active
       previewService: reviews-preview
       # prePromotionAnalysis:
       #   templates:
