--- a/reviews/templates/service.yaml
+++ b/reviews/templates/service.yaml
@@ -3,25 +3,25 @@ kind: Service
 metadata:
   name: reviews-active
   labels:
-    app: reviews
+    app: reviews-active
     service: reviews-active
 spec:
   ports:
     - port: 9080
       name: http
   selector:
-    app: reviews
+    app: reviews-active
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: reviews-preview
   labels:
-    app: reviews
+    app: reviews-preview
     service: reviews-preview
 spec:
   ports:
     - port: 9080
       name: http
   selector:
-    app: reviews
+    app: reviews-preview
