Active service has no pods under endpoint

--- a/reviews/templates/service.yaml
+++ b/reviews/templates/service.yaml
@@ -10,7 +10,7 @@ spec:
     - port: 9080
       name: http
   selector:
-    app: reviews-active
+    app: reviews
 ---
 apiVersion: v1
 kind: Service
