This is only a test

--- a/reviews/templates/service.yaml
+++ b/reviews/templates/service.yaml
@@ -17,7 +17,7 @@ kind: Service
 metadata:
   name: reviews-preview
   labels:
-    app: reviews-preview
+    app: reviews
     service: reviews-preview
 spec:
   ports:
